# openclaw-model-bridge

./: .gitattributes  .gitignore  CLAUDE.md  IMPROVEMENTS.md  LICENSE  PACKAGE_README.md  README.md  ROLLBACK.md  SOUL.md  VERSION  _hiagent_bootstrap_sh  _hiagent_setup_doc  _hiagent_sidecar_transfer_only  activate_openclaw_features.py  adapter.py  adversarial_audit.py  audit_log.py  auto_deploy.sh  check_registry.py  check_upgrade.sh  claude_escalation.py  code_assist.sh  config.yaml  config_loader.py  conv_quality.py  cron_canary.sh  cron_doctor.sh  cron_monitor_fatal_handler.sh  cron_monitor_scanner.py  crontab_safe.sh  cross_env_path_scanner.py  cross_os_quirk_scanner.py  cross_source_signal_aggregator.py  daily_observer.py  daily_observer.sh  daily_ops_report.sh  data_clean.py  diagnose.sh  expert_escalation.py  full_regression.sh  (+233 more)
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
data_clean_poc/: phase0_test.py
deploy/: install_openclaw_macmini.sh
docs/: FEATURES.md  GUIDE.md  INDEX.md  ai_leaders_source_alternatives.md  awesome_openclaw_usecase.md  baileys_ban_risk_assessment.md  changelog.md  charter_execution_plan_20260705.md  compatibility_matrix.md  complexity_budget.md  config.md  config_v26.md  doubao21_workload_routing_design.md  fail_plausible_bench.md  failure_modes_catalog.md  gateway_upgrade_eval_v2026.4.md  golden_trace.json  importyeti_sop.md  llm_cron_fail_fast_audit.md  llm_observer_design.md  llm_observer_ground_truth.yaml  llm_observer_scorecard.md  memory_plane.md  ontology_engine_extension_guide.md  ontology_engine_packaging.md  openclaw_architecture.md  openclaw_community_security_post.md  opportunity_radar_design.md  optimization_roadmap.md  pa_coupling_inventory.md  project_architecture_overview.md  provider_plugin_guide.md  push_path_loss_surface_audit_2026_06_15.md  reliability_bench_report.md  resilience_report.md  second_instance_poc_selection_20260707.md  security_boundaries.md  slo_benchmark_report.md  strategic_review_20260403.md  technical_charter_20260705.md  (+4 more)
docs/archive/: zhihu_article_en.md  zhihu_hybrid_search.md
docs/archive/data_clean_poc/: INTEGRATION.md  phase0_summary.json  phase0_test.py  prompt_sample1_orders.txt  prompt_sample2_products.txt  prompt_sample3_contacts.txt  sample1_orders.csv  sample2_products.csv  sample3_contacts.csv
docs/articles/: ai_partnership_first_principles_zh.md  audit_is_regression_not_prevention.md  claude_escalation_design.md  expert_escalation_design.md  seven_failure_scenarios.md  when_errors_become_narratives_zh.md  why_control_plane.md  why_control_plane_is_convergence_engine.md  why_control_plane_is_convergence_engine_devto.md  why_control_plane_is_convergence_engine_en.md  why_control_plane_zh.md  why_ontology.md  why_runtime_not_wrapper.md  why_runtime_not_wrapper_zh.md  zhihu_provider_compatibility.md
docs/ontology/: CONSTITUTION.md  README.md
docs/ontology/architecture/: ontology_llm_agent.md
docs/ontology/enterprise/: supply_chain_ontology.md
docs/ontology/foundations/: core_concepts.md  schools_comparison.md
docs/ontology/readings/: papers.md
docs/paper/silent_failures_taxonomy/: ARXIV_SUBMISSION_GUIDE.md  DECISIONS_NEEDED.md  draft.md  (+1 more)
examples/external_dogfood/: README.md  run_dogfood.sh
examples/minimal_consumer/: README.md  run_demo.py  run_demo.sh  weatherbot.py  weatherbot_state.json
examples/minimal_runtime/: README.md  golden_trace.json  minimal_runtime.py
jobs/: ontology_filter.py
jobs/acl_anthology/: run_acl_anthology.sh
jobs/ai_leaders_blogs/: run_ai_leaders_blogs.sh
jobs/ai_leaders_bsky/: run_ai_leaders_bsky.sh
jobs/ai_leaders_x/: ai_leaders_rotation.py  run_ai_leaders_x.sh
jobs/arxiv_monitor/: run_arxiv.sh
jobs/chaspark/: run_chaspark.sh
jobs/dblp/: run_dblp.sh
jobs/finance_news/: finance_news_zombie.py  run_finance_news.sh
jobs/freight_watcher/: importyeti_scraper.py  run_freight.sh
jobs/github_trending/: run_github_trending.sh
jobs/hf_papers/: run_hf_papers.sh
jobs/hn_watcher/: run_hn_fixed.sh
jobs/karpathy_x/: run_karpathy_x.sh
jobs/ontology_sources/: ontology_parser.py  run_ontology_sources.sh
jobs/openclaw_official/: run.sh  run_blog.sh  run_discussions.sh
jobs/openreview/: run_openreview.sh
jobs/pwc/: run_pwc.sh
jobs/rss_blogs/: run_rss_blogs.sh
jobs/semantic_scholar/: run_semantic_scholar.sh
ontology/: CONSTITUTION.md  README.md  __init__.py  convergence.py  convergence_ontology.yaml  diff.py  domain_ontology.yaml  engine.py  governance_checker.py  governance_ontology.yaml  llm_cron_audit.py  poc_semantic_query.py  policy_ontology.yaml  three_gate.py  tool_ontology.yaml
ontology/docs/: adversarial_audit_report.md  audit_coverage_retrospective.md  failure_modes_catalog.md  meta_governance_en.md  meta_governance_zh.md  ontology_diff_report.md  ontology_scope.md  why_ontology_zh.md
ontology/policies.d/: _example.yaml
ontology/tests/: adversarial_chaos_audit.py  test_audit_perf_dimensions.py  test_dream_cache_stability.py  test_engine.py  test_engine_phase4.py  test_governance_cron_matcher.py  test_governance_summary.py  test_notify_activity.py  test_three_gate.py
providers.d/: _example.yaml  _example_provider.py  deepseek_full_provider.py  deepseek_provider.py  doubao_provider.py  doubao_seed_21_provider.py  glm5_coding_provider.py
(+68 files in other folders)
